--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "node-cmd": "^3.0.0",
-    "python-shell": "^0.5.0"
+    "python-shell": "^0.5.0",
+    "simple-ssh": "^1.0.0",
+    "tunnel-ssh": "^4.1.4"
   }
 }
